[package]
name = "uni-addr"
version = "0.3.7"
edition = "2021"
rust-version = "1.71.0"

# === Publication info ===
authors = ["Hantong Chen <cxwdyx620@gmail.com>"]
categories = ["network-programming"]
description = "A unified address type that can represent a `std::net::SocketAddr`, a `std::os::unix::net::SocketAddr`, or a host name with port."
keywords = ["addr", "inet", "unix", "socket", "host"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hanyu-dev/uni-addr"

[dependencies]
serde = { version = "1.0", optional = true }
socket2 = { version = "0.6.1", optional = true }
tokio = { version = "1.41", features = ["net", "rt"], optional = true }
wrapper-lite = "0.4.0"

[dev-dependencies]
foldhash = { version = "0.2.0", default-features = false }
rstest = { version = "0.26.1", default-features = false }
tokio = { version = "1.48.0", features = ["rt", "macros"] }
uni-addr = { path = "./", features = ["feat-socket2"] }

[features]
default = ["feat-tokio", "feat-serde"]

# Enable Tokio support
feat-tokio = ["dep:tokio"]

# Enable Serde support
feat-serde = ["dep:serde"]

# Enable conversions between `UniAddr` and `socket2::SockAddr`
feat-socket2 = ["dep:socket2"]

[lints]
clippy.allow_attributes_without_reason = "warn"
clippy.assertions_on_result_states = "warn"
clippy.assigning_clones = "warn"
clippy.bool_to_int_with_if = "warn"
clippy.cognitive_complexity = "warn"
clippy.create_dir = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.default_trait_access = "warn"
clippy.disallowed_script_idents = "deny"
clippy.doc_link_with_quotes = "warn"
clippy.doc_markdown = "warn"
clippy.else_if_without_else = "deny"
clippy.enum_glob_use = "warn"
clippy.filetype_is_file = "warn"
clippy.inefficient_to_string = "warn"
clippy.mem_forget = "warn"
clippy.missing_panics_doc = "warn"
clippy.mod_module_files = "deny"
clippy.multiple_inherent_impl = "warn"
clippy.mutex_atomic = "warn"
clippy.mutex_integer = "warn"
clippy.needless_continue = "warn"
clippy.panic = "warn"
clippy.significant_drop_in_scrutinee = "warn"
clippy.todo = "warn"
clippy.unimplemented = "warn"
clippy.unreachable = "warn"
clippy.wildcard_dependencies = "deny"
clippy.wildcard_imports = "warn"
rust.unsafe_code = "warn"
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
